# rdt-cli

./: .gitignore  README.md  SCHEMA.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
rdt_cli/: __init__.py  __main__.py  auth.py  cli.py  client.py  config.py  constants.py  exceptions.py  fingerprint.py  index_cache.py  models.py  parser.py  session.py  transports.py
rdt_cli/commands/: _common.py  auth.py  browse.py  post.py  search.py  social.py
tests/: test_cli.py  test_client.py  test_parser.py  test_session.py  test_smoke.py
tests/fixtures/: listing.json  morechildren.json  post_detail.json
