[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rdt-cli"
version = "0.1.0"
description = "A CLI for Reddit — browse feeds, read posts, search, and interact via terminal 📖"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "jackwener" }]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "httpx>=0.27",
    "browser-cookie3>=0.19",
    "pyyaml>=6.0",
]

[project.scripts]
rdt = "rdt_cli.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["rdt_cli"]

[tool.pytest.ini_options]
markers = ["smoke: end-to-end tests requiring live cookies"]

[tool.ruff]
line-length = 120

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.4"]
